--- a/src/views/loginProfesores.handlebars
+++ b/src/views/loginProfesores.handlebars
@@ -1,3 +1,4 @@
+<h1>LOGIN PROFESORES</h1>
 <form action="/api/session/loginprofesores" method="POST">
   <label for="email">Escribe tu correo:
     <input type="email" name="email" id="email" /></label>
