--- a/src/views/perfilAlumno.handlebars
+++ b/src/views/perfilAlumno.handlebars
@@ -24,5 +24,7 @@
 
   <form action=""><button id="select_profesor" type="submit">Guardar Profesor|</button></form>
 {{/if}}
+<form action="/api/session/logout" method="post"><button type="submit">Cerrar
+    cesión</button></form>
 
 <script src="/js/perfilAlumno.js"></script>
