--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,3 +1,4 @@
+<h1>LOGIN ALUMNOS</h1>
 <form action="/api/session/login" method="POST">
   <label for="email">Escribe tu correo:
     <input type="email" name="email" id="email" /></label>
