--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,3 +1,6 @@
+{{#if rutina}}
+{{{rutina}}}
+{{else}}
 <html lang="en"></html>
   <head>
     <meta charset="UTF-8" />
@@ -9,3 +12,4 @@
     {{{body}}}
   </body>
 </html>
+{{/if}}
