--- a/src/views/loginProfesores.handlebars
+++ b/src/views/loginProfesores.handlebars
@@ -1,13 +1,15 @@
-<h1>LOGIN PROFESORES</h1>
-<form action="/api/session/loginprofesores" method="POST">
-  <label for="email">Escribe tu correo:
-    <input type="email" name="email" id="email" /></label>
-  <label for="password">Escribe tu contraseña:
-    <input type="password" name="password" id="password" /></label>
-  <button type="submit">Entrar</button>
-  {{#if error}}
-    <p>{{error}}</p>
-  {{else}}
-    <p></p>
-  {{/if}}
-</form>
+<main><h1>LOGIN PROFESORES</h1>
+  <form action="/api/session/loginprofesores" method="POST">
+    <label for="email">Escribe tu correo:
+    </label><input type="email" name="email" id="email" />
+    <label for="password">Escribe tu contraseña:
+    </label>
+    <input type="password" name="password" id="password" />
+    <button type="submit">Entrar</button>
+    {{#if error}}
+      <p>{{error}}</p>
+    {{else}}
+      <p></p>
+    {{/if}}
+  </form>
+</main>
