--- a/src/views/loginProfesores.handlebars
+++ b/src/views/loginProfesores.handlebars
@@ -1,4 +1,5 @@
-<main><h1>LOGIN PROFESORES</h1>
+<header><h1>LOGIN PROFESORES</h1></header>
+<main>
   <form action="/api/session/loginprofesores" method="POST">
     <label for="email">Escribe tu correo:
     </label><input type="email" name="email" id="email" />
@@ -6,10 +7,13 @@
     </label>
     <input type="password" name="password" id="password" />
     <button type="submit">Entrar</button>
+    <a href="/api/views/registroprofesores">Registrarme</a>
     {{#if error}}
       <p>{{error}}</p>
     {{else}}
       <p></p>
     {{/if}}
   </form>
+  <a class="volver" href="/api/views/paginaprincipal">Ir a página principal</a>
 </main>
+<footer>Copy @ Cantarin Pablo</footer>
