--- a/src/public/css/registro.css
+++ b/src/public/css/registro.css
@@ -10,7 +10,6 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
 main {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -59,11 +58,6 @@ form button {
   font-weight: bold;
 }
 
-form button:hover {
-  background-color: black;
-  color: white;
-}
-
 .volver {
   background-color: black;
   border-radius: 10px;
@@ -72,8 +66,16 @@ form button:hover {
   height: 1.5rem;
   text-decoration: none;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.volver:hover {
+  background-color: white;
+  color: black;
+}
 footer {
   width: 100%;
   height: 15vh;
