--- a/src/public/css/registroProfesores.css
+++ b/src/public/css/registroProfesores.css
@@ -10,7 +10,6 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
-
 main {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -19,6 +18,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
   background-image: url("https://www.infobae.com/resizer/v2/AE7KT2XUWZDTTLJOKFFQFM4N7M.png?auth=d896fa33c7876ff1fd53427f7664424c45c73a759487904caa2782248d82e049&smart=true&width=992&height=558&quality=85");
   background-repeat: none;
   background-size: cover;
@@ -59,11 +59,6 @@ form button {
   font-weight: bold;
 }
 
-form button:hover {
-  background-color: black;
-  color: white;
-}
-
 .volver {
   background-color: black;
   border-radius: 10px;
@@ -72,8 +67,44 @@ form button:hover {
   height: 1.5rem;
   text-decoration: none;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+.volver:hover {
+  background-color: white;
+  color: black;
+}
+.exitoso {
+  background-color: black;
+  color: white;
+  font-size: 2rem;
+  border-radius: 10px;
+  padding: 10px;
+}
+.loguear {
+  background-color: rgb(187, 9, 9);
+  color: white;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: all 1s;
+}
+
+.loguear:hover {
+  background-color: white;
+  color: black;
+  font-weight: bolder;
+  box-shadow: 0px 0px 10px gray;
+  scale: 1.2;
+}
 footer {
   width: 100%;
   height: 15vh;
