--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,25 +1,34 @@
 <header>
   
     <img src="https://i.ibb.co/4WsHDQX/Artboard-1-copy-8.png" alt="logo" />
-  
+  {{#if session}}
+     {{#if alumno}}
+          <p>¡Hola
+            {{alumno.nombre}}
+            {{alumno.apellido}}!</p>
+      {{/if}}    
+      {{#if profesor}}
+          <p>¡Hola
+            {{profesor.nombre}}
+            {{profesor.apellido}}!</p>     
+      {{/if}}
+      {{else}}
+      {{/if}}
   <nav>
+    
     <ul>
       <li>Home</li>
       <li>Novedades</li>
       <li>Rutinas</li>
       {{#if session}}
         {{#if alumno}}
-          <li>Hola
-            {{alumno.nombre}}
-            {{alumno.apellido}}
-            <a href="/api/users/perfil/{{alumno.id}}">Perifl</a></li>
+          <li>
+            <a href="/api/users/perfil/{{alumno.id}}">Perfil</a></li>
         {{/if}}
         {{#if profesor}}
-          <li>Hola
-            {{profesor.nombre}}
-            {{profesor.apellido}}<a
+          <li><a
               href="/api/users/perfil/profesor/{{profesor.id}}"
-            >Perifl</a></li>
+            >Perfil</a></li>
 
         {{/if}}
       {{else}}
