--- a/src/views/registroProfesores.handlebars
+++ b/src/views/registroProfesores.handlebars
@@ -1,14 +1,24 @@
-<form action="../../api/session/registroprofesores" method="POST">
-  <h4>REGISTRO</h4>
-  <label for="nombre">Nombre:
-    <input type="text" name="nombre" id="nombre" /></label>
-  <label for="apellido">Apellido:
-    <input type="text" name="apellido" id="apellido" /></label>
-  <label for="email">Correo electrónico:
-    <input type="email" name="email" id="email" /></label>
-  <label for="password">Contraseña:
-    <input type="password" name="password" id="password" /></label>
-  <label for="nacimiento">Fecha nacimiento:
-    <input type="date" name="cumpleanos" id="nacimiento" /></label>
-  <button type="submit">Registrarme</button>
-</form>
+<header><h1>REGISTRO PROFESORES</h1></header>
+<main>
+  {{#if message}}
+    <h3 class="exitoso">{{message}}</h3>
+    <a class="loguear" href="/api/views/loginprofesores">Loguearme</a>
+  {{else}}
+    <form action="../../api/session/registroprofesores" method="POST">
+      <h4>REGISTRO</h4>
+      <label for="nombre">Nombre:</label>
+      <input type="text" name="nombre" id="nombre" />
+      <label for="apellido">Apellido:</label>
+      <input type="text" name="apellido" id="apellido" />
+      <label for="email">Correo electrónico:</label>
+      <input type="email" name="email" id="email" />
+      <label for="password">Contraseña:</label>
+      <input type="password" name="password" id="password" />
+      <label for="nacimiento">Fecha nacimiento:</label>
+      <input type="date" name="cumpleanos" id="nacimiento" />
+      <button type="submit">Registrarme</button>
+    </form>
+  {{/if}}
+  <a class="volver" href="/api/views/paginaprincipal">Ir a página principal</a>
+</main>
+<footer>Copyrigth Cantarin Pablo</footer>
