--- a/src/views/perfilAlumno.handlebars
+++ b/src/views/perfilAlumno.handlebars
@@ -1,24 +1,29 @@
 <header><h1>PERFIL ALUMNO</h1></header>
 <main id="usuario_id" data-id="{{usuario._id}}">
-<div class="alumnoCuadro">
-  <div class="datos1">
-    <div>
-      <img src="/api/users/ver-foto-perfil-alumno/{{usuario._id}}" alt="">
+<div class="datos1">
+  <div>
+   
+      {{#if usuario.foto_perfil}}
+      <img class="imagenPerfil" src="/api/users/ver-foto-perfil-alumno/{{usuario._id}}" alt="" >
+      {{else}}
       <form action="/api/users/cargar-foto-perfil-alumno/{{usuario._id}}" method="post" enctype="multipart/form-data">
-      <label for="fotoPerfil">Cargar foto</label>
-      <input type="file" name="fotoPerfil" id="fotoPerfil">
-      <button type="submit">Subir</button>
+      <label class="inputFoto" for="fotoPerfil">Elegir foto</label>
+      <input class="archivo" style="display:none;" type="file" name="fotoPerfil" placeholder="Elegir foto" id="fotoPerfil">
+      <button class="cargarFoto"type="submit">Guardar</button>
       </form>
-    </div>
-    <div>
-<p>Nombre: {{usuario.nombre}}</p>
+      {{/if}}
+  </div>
+  <div>
+  <p>Nombre: {{usuario.nombre}}</p>
   <p>Apellido: {{usuario.apellido}}</p>
     </div>
   </div>
   
 </div>
+<div class="profesorYRutinas">
+  <div class="profesor">
 {{#if isProfesor}}
-  <h2>Profesor designado</h2>
+  <h2>PROFESOR</h2>
   <div>
     <p>Nombre: {{profesorDesignado.nombre}}</p>
     <p>Apellido: {{profesorDesignado.apellido}}</p>
@@ -39,15 +44,20 @@
 
   <form action=""><button id="select_profesor" type="submit">Guardar Profesor|</button></form>
 {{/if}}
-<section>
+</div>
+
+<section class="rutinas">
   <h2>RUTINAS</h2>
-<ul>
+<p>Cantidad: {{usuario.rutinas.length}}</p>
+<ul class="lista">
 {{#each usuario.rutinas}}
-<li><a href="/api/views/rutina/{{@index}}/{{../usuario._id}}">Rutina {{@index}}</a></li>
+<li><a href="/api/views/rutina/{{@index}}/{{../usuario._id}}"><img src="https://www.svgrepo.com/show/252602/file-view.svg" alt=""></a></li>
 {{/each}}
 </ul>
 </section>
-<form action="/api/session/logout" method="post"><button type="submit">Cerrar
+</div>
+<form  action="/api/session/logout" method="post"><button class="logout"type="submit">Cerrar
+  
     cesión</button></form>
 </main>
 <footer>Todos los derechos reservados &copy; Cantarin Pablo</footer>
