--- a/src/views/perfilProfesor.handlebars
+++ b/src/views/perfilProfesor.handlebars
@@ -2,11 +2,31 @@
 <main>
   <div class="profesorCuadro">
     <div class="datos1">
-      <img
-        class="fotoPerfil"
-        src="https://cdn.autobild.es/sites/navi.axelspringer.es/public/media/image/2016/09/569465-whatsapp-que-tus-contactos-ponen-rana-perfil.jpg?tf=1920x"
-        alt=""
-      />
+
+      {{#if profesor.foto_perfil}}
+        <img
+          class="imagenPerfil"
+          src="/api/users/ver-foto-perfil-profesor/{{profesor._id}}"
+          alt=""
+        />
+      {{else}}
+        <form
+          action="/api/users/cargar-foto-perfil-profesor/{{profesor._id}}"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          <label class="inputFoto" for="fotoPerfil">Elegir foto</label>
+          <input
+            class="archivo"
+            style="display:none;"
+            type="file"
+            name="fotoPerfil"
+            placeholder="Elegir foto"
+            id="fotoPerfil"
+          />
+          <button class="cargarFoto" type="submit">Guardar</button>
+        </form>
+      {{/if}}
       <div>
         <p>Nombre: {{profesor.nombre}}</p>
         <p>Apellido: {{profesor.apellido}}</p>
@@ -22,9 +42,26 @@
         {{#each alumnos}}
           <li class="alumno"><p>{{this.nombre}}
               {{this.apellido}}</p>
-            <a href="/api/users/panelAlumno/{{this._id}}">Ver</a><a
+            <a
+              class="contenedorImagen"
+              href="/api/users/panelAlumno/{{this._id}}"
+            ><img
+                class="infoAlumno"
+                src="https://www.svgrepo.com/show/423418/info.svg"
+                alt=""
+              /><div class="info-cuadro" id="infoCuadro">
+                Panel Alumno
+              </div></a>
+            <a
+              class="contenedorImagen"
               href="/api/views/confeccionrutinas/{{this._id}}"
-            >Crear rutina</a>
+            ><img
+                class="crearRutina"
+                src="https://www.svgrepo.com/show/526523/document-add.svg"
+                alt=""
+              /><div class="info-rutina" id="crea_Rutina">
+                Crear rutina
+              </div></a>
           </li>
         {{/each}}
       </ul>
@@ -42,3 +79,4 @@
 
 </main>
 <footer>Todos los derechos reservados &copy; Cantarin Pablo</footer>
+<script src="/js/perfilProfesor.js"></script>
