se agrega función para ver pdf de rutinas

--- a/src/views/panelAlumnos.handlebars
+++ b/src/views/panelAlumnos.handlebars
@@ -31,7 +31,8 @@
     <h2>RUTINAS</h2>
   <ul class="listaRutinas">
   {{#each alumno.rutinas}}
-    <li><a href="/api/views/rutina/{{@index}}/{{../alumno._id}}">Ver rutina</a></li>
+ 
+    <li><a href="/api/views/rutinaProfesor/{{@index}}/{{../alumno._id}}">Ver rutina</a></li>
   {{/each}}
   </ul>
   </section>
