--- a/src/public/css/perfilAlumno.css
+++ b/src/public/css/perfilAlumno.css
@@ -120,20 +120,23 @@ main {
   align-items: center;
   justify-content: space-evenly;
   gap: 10px;
-
-  color: white;
 }
 
 .lista li {
   margin: 5px;
   padding: 5px;
   border-radius: 5px;
-  background-color: black;
+  color: black;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 30;
+  color: black;
+  font-size: 3rem;
 }
 
 .lista li a {
   text-decoration: none;
-  color: white;
 }
 
 .lista li a img {
